Thu Jan 14 00:02:56 MET 1999 Sven Neumann <sven@gimp.org>

	* acconfig.h
	* config.h
	* configure.in: check for progressive mode in libjpeg

	* plug-ins/jpeg/jpeg.c: applied a patch from 
	Pete <pwhiting@fury.ittc.ukans.edu> that introduces comments
	and progressive saving for JPEGs

	
Tue Jan 12 23:25:46 PST 1999 Manish Singh <yosh@gimp.org>

	* app/menus.c: doh, we build tool menus on the fly

	* configure.in: add nl.po to ALL_LINGUAS

	* acinclude.m4
	* ltconfig
	* ltmain.sh: upgrade to libtool 1.2d (with fixes for irix6 and osf)

Mon Jan 11 18:11:32 PST 1999 Manish Singh <yosh@gimp.org>

	* plug-ins/tiff/tiff.c: small patch from Nick Lamb that
	does "The Right Thing (TM)" for RGB tiff images

Mon Jan 11 17:30:06 PST 1999 Manish Singh <yosh@gimp.org>

	* commands.[ch]
	* fileops.[ch]
	* gdisplay.[ch]
	* menus.c: implemented File->Revert

Mon Jan 11 22:02:10 GMT 1999 Adam D. Moss <adam@gimp.org>

	* app/paint_funcs.c:
	The bottleneck combine_inten_a_and_inten_a_pixels()
	function is a couple of times faster when there is a
	layer mask, for the common case, due to working with whole
	word-aligned ints where feasible instead of a char at a time.
	The same optimization could be implemented in lots of other
	places, but I'm going to bed.  Good night!

	* app/gimage_cmds.c: #include <cursorutil.h>

Mon Jan 11 21:35:44 MET 1999 Sven Neumann <sven@gimp.org>

	* configure.in: build the Makefile in the modules directory

1999-01-10  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in (AC_OUTPUT): Use `test -f' instead of `test -e'.
	(AC_OUTPUT): Generate `plug-ins/perl/*' after `plugins/Makefile',
	so that the `plug-ins' directory exists before the `mkdir
	plug-ins/perl' is executed.

Sun Jan 11 00:24:21 GMT 1999  Austin Donnelly  <austin@greenend.org.uk>

	Bit of a large checkin this - it's basically three things:
	  1 - GimpModules using gmodules to dynamically load and
	       initialise modules at gimp start of day.