@@ -2,7 +2,7 @@
 #define __TIPS_DIALOG_H__
 
 
-void tips_dialog_create ();
+void tips_dialog_create (void);
 
 
 #endif /* __TIPS_DIALOG_H__ */
